Modified testimonials to include email message.

--- a/content/testimonials.html
+++ b/content/testimonials.html
@@ -4,6 +4,7 @@ image:
 image_alt:
 ---
 
+<h6>Email me your opionions on one of my works, and I'll put it on the site!</h6>
 <h2>Testimonials</h2>
 <div class="span-8">
     <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
